Update tools.jar for deterministic builds
- Create hash of jar and copy it to deploy dir
- Remove BC jars from -srcfiles
- Remove commented out code for policy file